@@ -1,5 +1,14 @@
 2008-06-25  Alberto Garcia  <agarcia@igalia.com>
 
+	* src/vgl-bookmark-window.c
+	(vgl_bookmark_window_show):
+	Move the static bookmark_window variable to
+	vgl_bookmark_window_show() and clear it using a weak pointer.
+	(play_selected_row, close_button_clicked, vgl_bookmark_window_init)
+	(vgl_bookmark_window_close):
+	Make vgl_bookmark_window_close() receive the window to be
+	destroyed instead of using the singleton.
+
 	* configure.ac: Don't enable media player keys if there's no D-BUS
 	support.
 
